Compress/decompress file.

--- a/SignalProcessing/CS/compressed_sensing.html
+++ b/SignalProcessing/CS/compressed_sensing.html
@@ -55,12 +55,12 @@
 </div>
 <p><strong>Solution</strong></p>
 <div class="figure">
-<img src="./figure_solution.png" alt="Figure 2: Solution by CS and original signal ." id="fig:cs_time_domain" />
+<img src="./figure_solution.png" alt="Figure 2: Solution by CS and original signal ." id="fig:cs_time_domain" width="566" />
 <p class="caption">Figure 2: Solution by CS and original signal .</p>
 </div>
 <h2 id="sparse-in-fourier-domain">Sparse in Fourier domain</h2>
 <div class="figure">
-<img src="./figure_compressend_sensing_DCT.png" alt="Figure 3: CS solution when signal is sparse in Forier domain. Note that we took 200 samples for a singal of size 2000. The recovery is pretty good." id="fig:cs_freq_domain" />
+<img src="./figure_compressend_sensing_DCT.png" alt="Figure 3: CS solution when signal is sparse in Forier domain. Note that we took 200 samples for a singal of size 2000. The recovery is pretty good." id="fig:cs_freq_domain" width="566" />
 <p class="caption">Figure 3: CS solution when signal is sparse in Forier domain. Note that we took 200 samples for a singal of size 2000. The recovery is pretty good.</p>
 </div>
 <h1 id="mathematical-definitions">Mathematical definitions</h1>
